--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-  <title>Test...</title>
-  </head>
-  <body>
-  <h1>Test phase</h2>
-  </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
